fix: popover overlay is visible

--- a/packages/core/src/components/popover/popover.scss
+++ b/packages/core/src/components/popover/popover.scss
@@ -26,6 +26,7 @@
         position: fixed;
         right: $inset;
         top: $inset;
+        visibility: visible;
       }
 
       /* stylelint-disable-next-line max-nesting-depth */
